# GraAlgorytmy

./: CMakeLists.txt
include/: Bot.cpp  Bot.hpp  Judge.cpp  Judge.hpp  PionLog.h  plansza.hpp  warcaby.hpp
src/: main.cpp  plansza.cpp  warcaby.cpp
